sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_route_unknown/errors.duarouter
Error: The route of the vehicle '1' is not known.
Quitting (on error).
